# bongo_gadget

./: .gitignore  README.md  bongo_middle.spec  bongo_serial.py  bongo_serial.spec  pyproject.toml
ino_code/: BongoClock.ino  BongoClock_debug.ino  HelloWorld.ino  User_Setup.h
